# babkastarayaplesen

./: .gitignore  docker-compose.yaml  docker-compose.yml
api/: main.py  migrations.py
api/dependencies/: db_connection.py
api/migrations/: 1.sql  init.sql
api/routers/: message.py  register.py
ca1/: Dockerfile  main.py  utils.py
ca1/signed_ica_certs/: Intermediate_CA1.json
ca1/static/: app.js
ca1/templates/: index.html
ca2/: Dockerfile  main.py  utils.py
ca2/templates/: index.html
client/: cert.py  config.toml.example  main.py  pyproject.toml  requirements.txt
client/dependencies/: db_connection.py
client/routers/: certs.py  message.py
client/static/: app.js
client/templates/: index.html
client/usecases/: all_certs.py  crypto_utils.py  dtos.py  generate_keys.py  get_message.py  send_mesage.py
root_ca/: Dockerfile  command.txt  crypto_utils.py  docker-compose.yml  main.py
root_ca/cert_store/: root_cert.json
root_ca/cert_store/signed_ica_certs/: Intermediate_CA1.json
root_ca/static/: app.js
root_ca/templates/: index.html
